sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:16: error: not found: value ecart
ecart=getNombreValeurs()
^AlgCombSort:17: error: not found: value ecart
ecart = (ecart.toDouble / 1.3).toInt
^AlgCombSort:24: error: not found: value ecart
		if(ecart>1)
                   ^AlgCombSort:26: error: not found: value ecart
		ecart=ecart/1.3
                ^AlgCombSort:28: error: not found: value ecart
			while(i+ecart<getNombreValeurs())
                                ^AlgCombSort:39: error: not found: value ecart
	}while(ecart>1 || inverse=true)
               ^